fixed image border overlap issue on chrome

--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -33,6 +33,7 @@
               height: 100%
               // max-height: 100%
               // width: 100%
+              padding-bottom: 2px
               &__container
                 // display: none
                 width: auto
